--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,24 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# 探索深度学习的艺术 —— 费曼学习系统！
 
-## What is Nextra?
+> 每一个积极向上的人都想成为一个优秀的人，但是成为一个优秀的人很难，因为优秀需要沉淀，但是我们很多时候并没有机会
+沉淀，这个系统提供了一种方法，帮助我们自行改进。
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+在这个信息爆炸的时代，我们常常面临着学习知识的挑战。为了帮助您更有效地掌握各种主题，我们自豪地推出了一款全新的学习系统，灵感来源于物理学巨匠理查德·费曼的学习技巧。欢迎来到我们的站点，通过贯彻“费曼学习法”，您将发现学习的全新境界！
 
-## Documentation
+费曼学习法：学而不厌，教而不倦
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+费曼学习法的核心理念是通过教学来深化学习。我们的学习系统巧妙地融合了这一理念，通过提问自己问题的方式，帮助您复盘学习效果。这种自我对话的形式不仅促使您回顾所学知识，还能够加深对其理解。
+
+站点特色：
+
+个性化学习路径： 我们的系统通过分析您的学习历史和兴趣，为您定制个性化的学习路径。不同于传统学习平台的泛泛教学，我们致力于满足每位学习者独特的需求。
+
+问答式学习： 通过向自己提问问题，您将激发对知识的深层思考。我们的系统设计了丰富的问题库，涵盖各种主题，让您在提升自己的同时，也能享受到学习的乐趣。
+
+学习社区： 与志同道合的学习者互动交流，分享您的学习心得和疑惑。在我们的学习社区中，您将发现学习不再是孤独的旅程，而是一场有趣而充实的冒险。
+
+加入我们，开启深度学习之旅！
+
+无论您是专业学者还是对某个领域充满好奇，我们的学习系统都将成为您的得力助手。通过费曼学习法的引导，您将发现学习不再仅仅是为了应付考试，而是一种探索知识深度的艺术。
+
+加入我们的行列，与全球学习者一同探讨知识的奥秘。通过提问、解答，共同成长，开创学习的新时代。点击注册，即刻开启深度学习之旅，让学海无涯，收获无穷！
