--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,24 +1,37 @@
-# 探索深度学习的艺术 —— 费曼学习系统！
+import { Cards, Card } from 'nextra/components'
+// import { CardsIcon, OneIcon, WarningIcon } from '../../icons'
+
+# 用提问的方式来学习 —— 费曼学习系统！
 
 > 每一个积极向上的人都想成为一个优秀的人，但是成为一个优秀的人很难，因为优秀需要沉淀，但是我们很多时候并没有机会
 沉淀，这个系统提供了一种方法，帮助我们自行改进。
 
-在这个信息爆炸的时代，我们常常面临着学习知识的挑战。为了帮助您更有效地掌握各种主题，我们自豪地推出了一款全新的学习系统，灵感来源于物理学巨匠理查德·费曼的学习技巧。欢迎来到我们的站点，通过贯彻“费曼学习法”，您将发现学习的全新境界！
+### 一个关于费曼学习法的小故事
 
-费曼学习法：学而不厌，教而不倦
+有一位农民父亲，他的儿子三年前上考上了清华，女儿也在今年上了北大。
 
-费曼学习法的核心理念是通过教学来深化学习。我们的学习系统巧妙地融合了这一理念，通过提问自己问题的方式，帮助您复盘学习效果。这种自我对话的形式不仅促使您回顾所学知识，还能够加深对其理解。
+有人就好奇地问他：“你把两个孩子都送进了中国最好的大学，是不是有什么绝招啊，说出来我们听听呗。”
 
-站点特色：
+农民父亲挠挠头，憨厚地说：“我这人没什么文化，也不懂什么绝招只是觉得孩子上学花了那么多钱，不能白花了，就让孩子每天放学回家，把学校老师讲的内容跟他妹妹讲一遍，如果他妹妹有弄不懂的地方就问他哥哥，如果哥哥也弄不懂，就让他第二天问老师。同样的妹妹在学校学了东西后就教我，这样一来，花一份的钱，教了两个人。”
 
-个性化学习路径： 我们的系统通过分析您的学习历史和兴趣，为您定制个性化的学习路径。不同于传统学习平台的泛泛教学，我们致力于满足每位学习者独特的需求。
+“奇怪的是，孩子从小特别爱学习，学习成绩从小学到高中一路攀升，直到考上清华北大……”
 
-问答式学习： 通过向自己提问问题，您将激发对知识的深层思考。我们的系统设计了丰富的问题库，涵盖各种主题，让您在提升自己的同时，也能享受到学习的乐趣。
+其实这位父亲所用的，就是费曼学习法，只是他没意识到而已。
 
-学习社区： 与志同道合的学习者互动交流，分享您的学习心得和疑惑。在我们的学习社区中，您将发现学习不再是孤独的旅程，而是一场有趣而充实的冒险。
+### 系统可以干什么？
 
-加入我们，开启深度学习之旅！
+<Cards>
+  <Card title="专项模拟" href="/blog/special" />
+  <Card title="自定义模拟" href="/blog/custom" />
+  <Card title="读书实践" href="/blog/book" />
+</Cards>
 
-无论您是专业学者还是对某个领域充满好奇，我们的学习系统都将成为您的得力助手。通过费曼学习法的引导，您将发现学习不再仅仅是为了应付考试，而是一种探索知识深度的艺术。
+一个帮助你学习的系统
 
-加入我们的行列，与全球学习者一同探讨知识的奥秘。通过提问、解答，共同成长，开创学习的新时代。点击注册，即刻开启深度学习之旅，让学海无涯，收获无穷！
+1、将学习中问题录入系统，开始模拟，通过回答问题，复盘问题来检测自己学习的程度
+
+2、表达能力弱，先记录思路，再回答问题
+
+3、需要面试，提供了面试题库，根据需求选择模拟题目，测试自己回答问题的能力
+
+
