--- a/pages/blog/book.mdx
+++ b/pages/blog/book.mdx
@@ -1,6 +1,29 @@
 ---
-title: 阅读帮助
+title: 如何用系统帮助读书
 permalink: special
 ---
 
-带着问题读书
+思考一个问题：为什么老师对课程那么熟悉，几乎所有的题目都会？
+
+因为你只学习了一遍，而老师在当学生的时候学了好几年。
+当老师以后，上课前要提前把题目做一遍，给多个班讲好几遍。
+放学后，还要给个别同学讲一遍。
+然后每年来好几次。。你觉得能不熟悉吗？
+老师对知识的学习，也是在讲解过程中不断的加深理解。因为他要讲给你，如果自己不弄明白，如何讲清楚，如果被问倒，肯定要回去复盘，请教别的老师，不然再遇到更尴尬。
+
+费曼学习法，输出是最强大的学习力，而输出的方式有很多：
+
+### 1、给别人讲、交流
+为什么那些学霸总是什么都会，首先他学得好，然后同学都来问，第一人问他不会，然后学习一下，第二个人来问他就会了，甚至理解更深。
+很多大V，也是会不停的回答问题，因为问题可以帮助他们梳理自己的知识体系，加深理解。
+
+### 2、写文章
+你看到那么多免费的，有思考的文章是因为啥，通过输出不断的在某个领域加深护城河。
+
+### 3、演讲、ppt
+ppt演讲的过程中，如果你对某些方面不理解，很容易就会出现卡壳。
+
+### 4、学以致用
+读了很多书，却没有将书中的原理和方法，进行实践，就会慢慢的忘记。
+
+输出是最强大的学习力，而大多数人学习、看书都仅仅是看懂，根本不会坐下来思考、应用，所以注定是徒劳的。
