--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,37 +1,8 @@
 import { Cards, Card } from 'nextra/components'
+import { Bleed } from 'nextra-theme-docs'
 // import { CardsIcon, OneIcon, WarningIcon } from '../../icons'
+import Home from '../components/home'
 
-# 用提问的方式来学习 —— 费曼学习系统！
-
-> 每一个积极向上的人都想成为一个优秀的人，但是成为一个优秀的人很难，因为优秀需要沉淀，但是我们很多时候并没有机会
-沉淀，这个系统提供了一种方法，帮助我们自行改进。
-
-### 一个关于费曼学习法的小故事
-
-有一位农民父亲，他的儿子三年前上考上了清华，女儿也在今年上了北大。
-
-有人就好奇地问他：“你把两个孩子都送进了中国最好的大学，是不是有什么绝招啊，说出来我们听听呗。”
-
-农民父亲挠挠头，憨厚地说：“我这人没什么文化，也不懂什么绝招只是觉得孩子上学花了那么多钱，不能白花了，就让孩子每天放学回家，把学校老师讲的内容跟他妹妹讲一遍，如果他妹妹有弄不懂的地方就问他哥哥，如果哥哥也弄不懂，就让他第二天问老师。同样的妹妹在学校学了东西后就教我，这样一来，花一份的钱，教了两个人。”
-
-“奇怪的是，孩子从小特别爱学习，学习成绩从小学到高中一路攀升，直到考上清华北大……”
-
-其实这位父亲所用的，就是费曼学习法，只是他没意识到而已。
-
-### 系统可以干什么？
-
-<Cards>
-  <Card title="专项模拟" href="/blog/special" />
-  <Card title="自定义模拟" href="/blog/custom" />
-  <Card title="读书实践" href="/blog/book" />
-</Cards>
-
-一个帮助你学习的系统
-
-1、将学习中问题录入系统，开始模拟，通过回答问题，复盘问题来检测自己学习的程度
-
-2、表达能力弱，先记录思路，再回答问题
-
-3、需要面试，提供了面试题库，根据需求选择模拟题目，测试自己回答问题的能力
-
-
+<Bleed>
+  <Home />
+</Bleed>
