--- a/pages/blog/book.mdx
+++ b/pages/blog/book.mdx
@@ -1,7 +1,21 @@
 ---
 title: 关于博客 
-permalink: special
+permalink: book
 ---
 
-每个人都想拥有一个博客，下面是市面上常见的搭建方式，提供指导50
+拥有一个个人博客或网站还是很酷的，特别是面试或者展示自己的时候，一个网站打造自己的IP。
+
+这里将为你提供各种免费的博客、网站搭建教程，您可以参考教程或者到官方站点学习搭建。
+
+如果您有一定的经验，可以自行搭建，我们也可以提供指导。
+
+当然，如果您想更快的完成搭建，也可以直接邀请我们给您搭建，搭建一次99元。
+
+有后台的比如：WordPress、Halo。
+无后台的如：Jekyll、Hexo
+
+
+
+
+
 
