--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,6 @@
 import { Cards, Card } from 'nextra/components'
-import { Bleed } from 'nextra-theme-docs'
+// import { Bleed } from 'nextra-theme-docs'
 // import { CardsIcon, OneIcon, WarningIcon } from '../../icons'
 import Home from '../components/home'
 
-<Bleed>
-  <Home />
-</Bleed>
+<Home />
