--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,21 +1,5 @@
 # 关于站点
 
-> 知识的爆炸性增长，让我们每天接受无数的知识，然而留存下来的知识却聊聊无几，为此，我开发了此系统，帮助记忆。
-
-### 一、站点主旨
-
-用提问的方式来学习
-
-### 二、提问方式
-
-1. 自己给自己提问
-2. 提问模版和公共题库
-3. 找老师提问
-4. ai 提问
-
-### 三、学习
-
-1. 回答问题更深入学习问题，帮助自己了解对知识的掌握能力
-2. 面试题目回答能力
-3. 帮助读书，更深入了解一本书
-4. 锻炼表达能力和逻辑思考能力
+- 帮助搭建个人站点
+- 帮助搭建企业门户网站
+- 博客：https://godruoyi.com/
