--- a/pages/blog/book.mdx
+++ b/pages/blog/book.mdx
@@ -11,8 +11,14 @@ permalink: book
 
 当然，如果您想更快的完成搭建，也可以直接邀请我们给您搭建，搭建一次99元。
 
-有后台的比如：WordPress、Halo。
-无后台的如：Jekyll、Hexo
+- 有后台的比如：WordPress、Halo。
+- 无后台的如：Jekyll、Hexo
+- markdown:
+- github:
+- 富文本相关：
+- 需要服务器：
+- docker:
+- 支持响应式：
 
 
 
