--- a/pages/blog/gmeek.mdx
+++ b/pages/blog/gmeek.mdx
@@ -3,10 +3,8 @@ title: Gmeek
 permalink: gmeek
 ---
 
-体验Demo: https://blog.meekdai.com/
+体验Demo: https://richlpf.github.io/question.github.io/
 
-搭建方法：https://github.com/Meekdai/Gmeek
-
-
+搭建参考方法：https://blog.meekdai.com/post/Gmeek-kuai-su-shang-shou.html
 
 效果预览：![Gmeek](/images/geek.png)
